<resources>
    <string name="app_name" translatable="false">Psy</string>
    <string name="title_home">Diary</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_login">Login</string>
    <string name="title_signup">Signup</string>
    <string name="title_map">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_about">About</string>
    <string name="label_email" translatable="false">Email</string>
    <string name="label_password">Password</string>
    <string name="button_login" translatable="false">Login</string>
    <string name="login_subtitle">Subtitle</string>
    <string name="label_reset_password">Reset Password</string>
    <string name="label_create_account">Create Account</string>
    <string name="button_i_have_account">I have an account</string>
    <string name="button_create_account">Create Account</string>
    <string name="label_accept_terms">I have read and agree to the terms</string>
    <string name="label_telephone">Telephone</string>
    <string name="label_name">Name</string>
    <string name="signup_subtitle">Fill in your account details</string>
    <string name="app_logo_description">App logo</string>
    <string name="app_version_label">Version: %1$s</string>
    <string name="tv_bruno" translatable="false">Bruno Cortez</string>
    <string name="tv_decio" translatable="false">Décio Montanhani</string>
    <string name="tv_pedro" translatable="false">Pedro Xudre</string>
    <string name="tv_vitor" translatable="false">Vitor Ferraz</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="btShareText">Share</string>
    <string name="btLogoutText">Logout</string>
    <string name="website_link">Hi! Get to know more about Psy App:\nhttps://psyapp.netlify.app/</string>
    <string name="user_id" translatable="false">Id: </string>
    <string name="user_email" translatable="false">Email: </string>
</resources>
