<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:transitionName="logoApp"
                android:id="@+id/ivLogoApp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_logo_psy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:transitionName="textApp"
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginTop="48dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/ivLogoApp"
                app:layout_constraintTop_toTopOf="@+id/ivLogoApp" />


            <LinearLayout
                android:id="@+id/containerLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/tvResetPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSubTitleLogin">


                <LinearLayout style="@style/container_edit_text">

                    <TextView
                        style="@style/label_edit_text"
                        android:text="@string/label_email" />

                    <EditText
                        android:id="@+id/etEmailLogin"
                        style="@style/field_edit_text"
                        tools:text="heiderlopes@apps.com.br" />

                </LinearLayout>

                <LinearLayout style="@style/container_edit_text">

                    <TextView
                        style="@style/label_edit_text"
                        android:text="@string/label_password" />

                    <EditText
                        android:id="@+id/etPasswordLogin"
                        style="@style/field_edit_text"
                        android:inputType="textPassword"
                        tools:text="heiderlopes@apps.com.br" />
                </LinearLayout>

                <Button
                    android:id="@+id/btLogin"
                    android:text="@string/button_login"
                    style="@style/button"/>

                <ProgressBar
                    android:id="@+id/pb"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvSubTitleLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_subtitle"
                android:textColor="#9EB0BC"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/tvAppName"
                app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

            <TextView
                android:id="@+id/tvResetPassword"
                style="@style/link_login"
                android:layout_width="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/label_reset_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvNewAccount"
                style="@style/link_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:gravity="end"
                android:text="@string/label_create_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

